# serializer version: 1
# name: test_comment_ok[comment_c_expr]
  '''
  SELECT
      1, /* one */
      2
  
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
        select_expr
          integer_literal	2
  
  '''
# ---
# name: test_comment_ok[comment_c_leading]
  '''
  /* TODO: SELECT 2 */
  SELECT 1
  
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
  
  '''
# ---
# name: test_comment_ok[comment_c_trailing]
  '''
  SELECT 1
  /* one */
  
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
  
  '''
# ---
# name: test_comment_ok[comment_sh_expr]
  '''
  SELECT
      1, # one
      2
  
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
        select_expr
          integer_literal	2
  
  '''
# ---
# name: test_comment_ok[comment_sh_leading]
  '''
  # TODO: SELECT 2
  SELECT 1
  
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
  
  '''
# ---
# name: test_comment_ok[comment_sh_trailing]
  '''
  SELECT 1
  # one
  
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
  
  '''
# ---
# name: test_comment_ok[comment_sql_expr]
  '''
  SELECT
      1, -- one
      2
  
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
        select_expr
          integer_literal	2
  
  '''
# ---
# name: test_comment_ok[comment_sql_leading]
  '''
  -- myfile.sql
  SELECT 1
  
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
  
  '''
# ---
# name: test_comment_ok[comment_sql_trailing]
  '''
  SELECT 1
  -- one
  
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
  
  '''
# ---
